Fix build: remove GTM and set base path to ./

--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72151-2"></script>
-    <script>
-      if (
-          (document.location.hostname.search("wordletta.com") !== -1) || 
-          (document.location.hostname.search("sean-o.com") !== -1)
-      ){
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-72151-2');
-      }
-    </script>
+    <!-- 
+      GTM removed to fix build error
+    -->
 
     <meta charset="UTF-8" />
     <script type="module" src="./main.js"></script>
