--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     <template x-if="userWins || userLosses">
                       <span><span x-text="userWinPct"></span>%</span>
                     </template>
-                    <template x-if="!userWins && !userLosses">0%</template>
+                    <template x-if="!userWins && !userLosses"><span>0%</span></template>
                   </span>
                   <span class="text-[10px] uppercase text-indigo-800">Win Rate</span>
                 </div>
@@ -532,7 +532,7 @@
             <!-- Title / Close-->
             <div class="flex items-start justify-between mb-6 border-b border-slate-100 pb-2">
               <h5 class="mr-3 text-slate-800 max-w-none text-xl font-bold">Release Notes <span
-                  class="text-sm font-normal text-slate-400">v1.4.0</span></h5>
+                  class="text-sm font-normal text-slate-400">v1.4.3</span></h5>
               <button type="button" class="text-2xl font-bold text-slate-400 hover:text-slate-600 cursor-pointer"
                 @click="showReleaseNotesModal = false">&times;</button>
             </div>
