--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
     .animate-slide-down {
       animation: slideDown 0.6s ease-out forwards;
     }
+
+    @keyframes pulseCursor {
+
+      0%,
+      100% {
+        opacity: 0;
+      }
+
+      50% {
+        opacity: 1;
+      }
+    }
+
+    .animate-pulse-cursor {
+      animation: pulseCursor 2s infinite;
+    }
   </style>
   <title>WordLetta</title>
 </head>
@@ -76,8 +92,15 @@
                 class="font-['Ramabhadra'] inline-block font-bold text-3xl sm:text-4xl md:text-6xl lg:text-8xl text-center text-slate-900 h-14 w-14 sm:h-20 sm:w-20 md:h-24 md:w-24 lg:h-40 lg:w-48 lg:p-1 bg-transparent"
                 :class="{
                     'bg-amber-400 border-amber-500': boxStatus[i] == 1,
-                    'bg-emerald-500 border-emerald-600 text-white': boxStatus[i] == 2
+                    'bg-emerald-500 border-emerald-600 text-white': boxStatus[i] == 2,
+                    'translate-y-12 opacity-0': isClearing
                   }" type="text" disabled="disabled" />
+
+              <!-- Cursor -->
+              <div
+                x-show="cursor === i && !isWinner && !isLoser && !showNewGameModal && !dailyChallengeComplete && !isClearing"
+                class="absolute bottom-2 left-1/2 transform -translate-x-1/2 w-3/4 h-1.5 bg-slate-300/50 rounded-full animate-pulse-cursor">
+              </div>
             </div>
           </template>
         </div>
@@ -104,7 +127,9 @@
           </template>
           <!-- Ghost Rows (Remaining Guesses) -->
           <template x-for="i in (totalGuesses - guesses.length - (isWinner || isLoser ? 0 : 1))" :key="'ghost-'+i">
-            <div class="w-full flex justify-center opacity-30 py-1">
+            <div class="w-full flex justify-center opacity-30 py-1" x-transition:leave="transition ease-in duration-600"
+              x-transition:leave-start="max-h-[100px] opacity-30 transform translate-y-0"
+              x-transition:leave-end="max-h-0 opacity-0 transform translate-y-4">
               <div class="flex justify-center gap-2">
                 <template x-for="j in wordLength" :key="j">
                   <div class="w-11 h-11 md:w-14 md:h-14 border-2 border-slate-300 rounded bg-slate-100"></div>
