--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <!-- Cursor -->
               <div
                 x-show="cursor === i && !isWinner && !isLoser && !showNewGameModal && !dailyChallengeComplete && !isClearing"
-                class="absolute bottom-2 left-1/2 transform -translate-x-1/2 w-3/4 h-1.5 bg-slate-300/50 rounded-full animate-pulse-cursor">
+                class="absolute bottom-2 left-1/2 transform -translate-x-1/2 w-4/5 h-1.5 bg-slate-400 rounded-full animate-pulse-cursor">
               </div>
             </div>
           </template>
