--- a/index.html
+++ b/index.html
@@ -592,6 +592,8 @@
             </div>
 
             <!-- Debug Tools (Dev) -->
+            <!-- Debug Tools (Dev Only) - Uncomment for local testing -->
+            <!-- 
             <div class="border-t border-slate-100 pt-4 mt-2">
               <div class="text-xs font-bold text-slate-300 mb-2 uppercase">Debug Tools</div>
               <div class="flex gap-2">
@@ -604,7 +606,8 @@
                   30-Day
                 </button>
               </div>
-            </div>
+            </div> 
+            -->
 
 
 
